migrated to angular 14

--- a/angular.json
+++ b/angular.json
@@ -116,8 +116,9 @@
       }
     }
   },
-  "defaultProject": "pokedex",
   "cli": {
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
