--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "postinstall": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -52,5 +53,9 @@
     "prettier": "^2.7.1",
     "prettier-eslint": "^15.0.1",
     "typescript": "~4.6.4"
+  },
+  "engines": {
+    "node": "14.17.1",
+    "npm": "6.14.13"
   }
 }
