changes for heroku deployment

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:stats": "ng build --stats-json",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
@@ -23,6 +24,7 @@
     "@angular/router": "^14.1.0",
     "@apollo/client": "^3.0.0",
     "apollo-angular": "^3.0.1",
+    "express": "^4.18.1",
     "graphql": "^16",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
@@ -52,7 +54,8 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "prettier": "^2.7.1",
     "prettier-eslint": "^15.0.1",
-    "typescript": "~4.6.4"
+    "typescript": "~4.6.4",
+    "webpack-bundle-analyzer": "^4.5.0"
   },
   "engines": {
     "node": "14.17.1",
