--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
     "@apollo/client": "^3.0.0",
+    "@ngrx/effects": "^14.0.2",
     "@ngrx/store": "^14.0.2",
+    "@ngrx/store-devtools": "^14.0.2",
     "apollo-angular": "^3.0.1",
     "express": "^4.18.1",
     "graphql": "^16",
