--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@ngrx/store": "^14.0.2",
     "@ngrx/store-devtools": "^14.0.2",
     "apollo-angular": "^3.0.1",
-    "express": "^4.18.1",
     "graphql": "^16",
     "ngx-quicklink": "^0.3.0",
     "rxjs": "~6.6.0",
@@ -43,6 +42,7 @@
     "@angular-eslint/template-parser": "12.7.0",
     "@angular/cli": "^14.1.0",
     "@angular/compiler-cli": "^14.1.0",
+    "@ngrx/eslint-plugin": "^14.0.2",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.28.2",
@@ -50,6 +50,7 @@
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "express": "^4.18.1",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
@@ -59,8 +60,7 @@
     "prettier": "^2.7.1",
     "prettier-eslint": "^15.0.1",
     "typescript": "~4.6.4",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "@ngrx/eslint-plugin": "^14.0.2"
+    "webpack-bundle-analyzer": "^4.5.0"
   },
   "engines": {
     "node": "14.17.1",
