--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "apollo-angular": "^3.0.1",
     "graphql": "^16",
     "ngx-quicklink": "^0.3.0",
+    "node": "^18.7.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
