--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@ngrx/store": "^14.0.2",
     "@ngrx/store-devtools": "^14.0.2",
     "apollo-angular": "^3.0.1",
+    "compression": "^1.7.4",
+    "express": "^4.18.1",
     "graphql": "^16",
     "ngx-quicklink": "^0.3.0",
     "node": "^18.7.0",
-    "express": "^4.18.1",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
